tests/negative/test_explicit_redef_local.orb
explicit Foo i32;

fnc main () () {
    explicit::global Foo bool;
};